Fixed Media/episode/preview text color for dark mode

--- a/web/css/tools/episodePreview.css
+++ b/web/css/tools/episodePreview.css
@@ -308,8 +308,7 @@
     .Media_episode_preview_tool.Media_episode_preview_template_square .Streams_preview_episode_card_fg {
         background-color: #3f3f3f;
     }
-    .Media_episode_preview_tool.Q_selected.Media_episode_preview_template_tall .Streams_preview_episode_card_fg,
-    .Media_episode_preview_tool.Q_selected.Media_episode_preview_template_square .Streams_preview_episode_card_fg {
+    .Media_episode_preview_tool.Q_selected {
         color: #fff;
     }
 }
